--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
     <head>
         <link rel="stylesheet" href="/assets/styles.css"/>
         <script src="dist/main.js" defer></script>
